ipc/ipdl/test/ipdl/error/noProtocolInHeader.ipdlh
protocol noProtocolInHeader {
child:
    async __delete__();
};
